2008-09-23  Stefan Jahn  <stefan@lkcc.org>

	* EKV26nMOS.va: Updated EKV26 NMOS type model.  Thanks to Mike
	Brinson.

	* qucsVersion.xml: Fixed some 'bad attribute' errors in XML code.

2008-09-22  Stefan Jahn  <stefan@lkcc.org>

	* qucsMODULEcore.xml: Finally @(initial_model) and
	@(initial_instance) code separated and evaluated only once at DC
	startup.

2008-09-21  Stefan Jahn  <stefan@lkcc.org>

	* qucsMODULEcore.xml: Separation for @(initial_model) code and
	variables implemented.  Also saving global instance variables as
	operating points.

2008-09-20  Stefan Jahn  <stefan@lkcc.org>

	* hicumL0V1p2.va: Added new preliminary version of HICUM L0 v1.2
	compact model.

2008-09-03  Stefan Jahn  <stefan@lkcc.org>

	* qucsVersion.xml: Added second derivative for pow(x,y) when y is
	constant.  Cosmetic changes.

2008-06-14  Stefan Jahn  <stefan@lkcc.org>

	* EKV26nMOS.va, EKV26pMOS.va: Added new EPFL-EKV MOSFET V2.6
	models.  Thanks to Mike Brinson!

2008-04-01  Stefan Jahn  <stefan@lkcc.org>

	* MESFET.va: Added new MESFET models provided by Mike Brinson.

2008-03-11  Stefan Jahn  <stefan@lkcc.org>

	* qucsMODULEgui.xml, qucsMODULEdefs.xml: Skipping surrounding
	brackets for unary expressions in property values.

2008-02-14  Stefan Jahn  <stefan@lkcc.org>

	* qucsMODULEgui.xml: Fixed notation of number suffixes for some
	of the suffixes in the GUI code.

2008-02-08  Stefan Jahn  <stefan@lkcc.org>

	* potentiometer.va: Added new Potentiometer Verilog-A model.
	Thanks to Mike!

2008-01-21  Stefan Jahn  <stefan@lkcc.org>

	* hicumL0V1p12.va: Added new device: HICUM L0 v1.12 model.

	* qucsMODULEcore.xml: Declaring global model and instance
	variables.  Also implemented $given() and $param_given()
	correctly.

2008-01-19  Stefan Jahn  <stefan@lkcc.org>

	* log_amp.va: Added new verilog device: Logarithmic Amplifier.
	Thanks to Mike Brinson!

2008-01-18  Stefan Jahn  <stefan@lkcc.org>

	* qucsMODULEcore.xml: Fixed memory by using new function
	setInternalNode().
