@@ -1,3 +1,8 @@
+2008-09-24  Stefan Jahn  <stefan@lkcc.org>
+
+	* qucsMODULEcore.xml: Additionally separated code for
+	@(initial_step) and @(final_step).
+
 2008-09-23  Stefan Jahn  <stefan@lkcc.org>
 
 	* EKV26nMOS.va: Updated EKV26 NMOS type model.  Thanks to Mike
